
Sim:
 ! Sonar will now detect ships/hovers - this is since los can't raycast through water.
   note that wobble still exists without LoS.

Lua:
 ! Undeprecate {unit,feature}def.modelname and add .modeltype and .modelpath to
   allow reading these without loading the model. Removed def.model.{name,type,path}
   so they aren't used accidentally.
 - Add Spring.Get{Game,Menu}Name to LuaUnsyncedRead, so LuaMenu and unsynced Lua handles know about each other
 - Add new callins (LuaMenu only):
   ActivateMenu() that is called whenever LuaMenu is on with no game loaded.
   ActivateGame() that is called whenever LuaMenu is on with a game loaded.
   AllowDraw() if it returns false, the next draw call is skipped (only active when a game isn't running)


-- 103.0 --------------------------------------------------------
General:
 - Fix & Improve performace
 - Add 'allowTake' modoption (default: true) to enable/disable /take (by lamer)
 - Add onlyLocal boolean value to modinfo.lua (default false)
   If true, spring won't listen for incoming connections when running
   this game unless GAME\OnlyLocal is specified in the start script.

Sim:
 - Add new UnitDef tag "buildingMask" and LuaSyncedCtrl function "SetSquareBuildingMask". (by ivand)
   Both used in conjunction to allow/disallow construction of certain unit types (via setting buildingMask)
   on certain tiles (via SetSquareBuildingMask). By default all tiles and buildings have mask of 1

Rendering:
 - Ghosted buildings are now consistent when changing specTeam/specFullView


Bugfixes:
 - Fix #5301 Units with restricted firearcs do not turn to aim
 - Fix #5302 extreme slowdown

-- 102.0 --------------------------------------------------------
General:
 - Fix & Improve LoS performance
 ! remove LuaModUICtrl config setting
 ! remove ClassicGroundMoveType
 ! remove SpringLobby from spring installer
 - update model matrices on demand instead of once per frame

Sim:
 ! allow units to unstuck themselves from an unpathable square