@@ -19,98 +19,95 @@
         lua_rawset(L, -3)
 
 struct dlEvent {
-	int ID;
+	int id;
 	virtual void processEvent() = 0;
 	virtual ~dlEvent(){}
 };
 
 struct dlStarted : public dlEvent {
 	void processEvent() {
-		eventHandler.DownloadStarted(ID);
+		eventHandler.DownloadStarted(id);
 	}
 };
 struct dlFinished : public dlEvent {
 	void processEvent() {
-		eventHandler.DownloadFinished(ID);
+		eventHandler.DownloadFinished(id);
 	}
 };
 struct dlFailed : public dlEvent {
 	int errorID;
 	void processEvent() {
-		eventHandler.DownloadFailed(ID, errorID);
+		eventHandler.DownloadFailed(id, errorID);
 	}
 };
 struct dlProgress : public dlEvent {
 	long downloaded;
 	long total;
 	void processEvent() {
-		eventHandler.DownloadProgress(ID, downloaded, total);
+		eventHandler.DownloadProgress(id, downloaded, total);
 	}
 };
 
 struct DownloadItem {
-	int ID;
+	int id;
 	std::string filename;
 	DownloadEnum::Category cat;
 	DownloadItem() { }
-	DownloadItem(int ID, const std::string& filename, DownloadEnum::Category& cat) : ID(ID), filename(filename), cat(cat) { }
+	DownloadItem(int id_, const std::string& filename, DownloadEnum::Category& cat) : id(id_), filename(filename), cat(cat) { }
 };
 
 
 struct DownloadQueue {
 public:
-	DownloadQueue(): thread(nullptr), shutdown(false) {}
+	DownloadQueue(): thread(nullptr), breakLoop(false) {}
 	~DownloadQueue() { Join(); }
 
 	void Pump();
 	void Push(const DownloadItem& downloadItem);
-
-	void GrabLock() { mutex.lock(); }
-	void FreeLock() { mutex.unlock(); }
+	bool Remove(int id);
 
 	void Join();
 private:
 	std::deque<DownloadItem> queue;
 	spring::mutex mutex;
 	spring::thread* thread;
-	bool shutdown;
+	bool breakLoop;
 } downloadQueue;
 
 std::deque<dlEvent*> dlEventQueue;
 spring::mutex dlEventQueueMutex;
 
 void AddQueueEvent(dlEvent* ev) {
-	dlEventQueueMutex.lock();
+	std::lock_guard<spring::mutex> lck(dlEventQueueMutex);
 	dlEventQueue.push_back(ev);
-	dlEventQueueMutex.unlock();
 }
 
-void QueueDownloadStarted(int ID) //queue from other thread download started event
+void QueueDownloadStarted(int id) //queue from other thread download started event
 {
 	dlStarted* ev = new dlStarted();
-	ev->ID = ID;
+	ev->id = id;
 	AddQueueEvent(ev);
 }
 
-void QueueDownloadFinished(int ID) //queue from other thread download started event
+void QueueDownloadFinished(int id) //queue from other thread download started event
 {
 	dlFinished* ev = new dlFinished();
-	ev->ID = ID;
+	ev->id = id;
 	AddQueueEvent(ev);
 }
 
-void QueueDownloadFailed(int ID, int errorID) //queue from other thread download started event
+void QueueDownloadFailed(int id, int errorID) //queue from other thread download started event
 {
 	dlFailed* ev = new dlFailed();
-	ev->ID = ID;
+	ev->id = id;
 	ev->errorID = errorID;
 	AddQueueEvent(ev);
 }
 
-void QueueDownloadProgress(int ID, long downloaded, long total) //queue from other thread download started event
+void QueueDownloadProgress(int id, long downloaded, long total) //queue from other thread download started event
 {
 	dlProgress* ev = new dlProgress();
-	ev->ID = ID;
+	ev->id = id;
 	ev->downloaded = downloaded;
 	ev->total = total;
 	AddQueueEvent(ev);
@@ -127,9 +124,9 @@ void UpdateProgress(int done, int size) {
 }
 
 
-int Download(int ID, const std::string& filename, DownloadEnum::Category cat)
+int Download(int id, const std::string& filename, DownloadEnum::Category cat)
 {
-	currentDownloadID = ID;
+	currentDownloadID = id;
 	// FIXME: Progress is incorrectly updated when rapid is queried to check for existing packages.
 	SetDownloadListener(UpdateProgress);
 	LOG_L(L_DEBUG, "Going to download %s", filename.c_str());
@@ -146,10 +143,10 @@ int Download(int ID, const std::string& filename, DownloadEnum::Category cat)
 	// TODO: count will be 1 when archives already exist. We should instead return a different result with DownloadFailed/DownloadFinished?
 	if (count == 0) { // there's nothing to download
 		result = 2;
-		QueueDownloadFailed(ID, result);
+		QueueDownloadFailed(id, result);
 	} else {
 		LOG_L(L_DEBUG, "Download finished %s", filename.c_str());
-		QueueDownloadStarted(ID);
+		QueueDownloadStarted(id);
 		result = DownloadStart();
 		// TODO: This works but there are errors spammed as it's trying to clear timers in the main thread, which this is not:
 		// Error: [Watchdog::ClearTimer(id)] Invalid thread 4 (_threadId=(nil))
@@ -163,45 +160,42 @@ int Download(int ID, const std::string& filename, DownloadEnum::Category cat)
 
 void DownloadQueue::Join()
 {
-	shutdown = true;
+	breakLoop = true;
 	if (thread != nullptr) {
 		thread->join();
 		SafeDelete(thread);
 	}
+	breakLoop = false;
 }
 
 __FORCE_ALIGN_STACK__
 void DownloadQueue::Pump()
 {
-	while (!shutdown) {
+	while (!breakLoop) {
 		DownloadItem downloadItem;
-
 		{
-			GrabLock();
+			std::lock_guard<spring::mutex> lck(mutex);
 			assert(queue.size() > 0);
 			downloadItem = queue.front();
-			FreeLock();
 		}
 		const std::string& filename = downloadItem.filename;
 		DownloadEnum::Category cat = downloadItem.cat;
-		int ID = downloadItem.ID;
+		int id = downloadItem.id;
 
 		if (!filename.empty()) {
 			LOG_L(L_DEBUG, "DOWNLOADING: %s", filename.c_str());
-			const int result = Download(ID, filename, cat);
+			const int result = Download(id, filename, cat);
 			if (result == 0) {
-				QueueDownloadFinished(ID);
+				QueueDownloadFinished(id);
 			} else {
-				QueueDownloadFailed(ID, result);
+				QueueDownloadFailed(id, result);
 			}
 		}
 
 		{
-			GrabLock();
+			std::lock_guard<spring::mutex> lck(mutex);
 			queue.pop_front();
-			const bool empty = queue.empty();
-			FreeLock();
-			if (empty)
+			if(queue.empty())
 				break;
 		}
 	}
@@ -209,16 +203,16 @@ void DownloadQueue::Pump()
 
 void DownloadQueue::Push(const DownloadItem& downloadItem)
 {
-	GrabLock();
+	std::unique_lock<spring::mutex> lck(mutex);
 
 	if (queue.empty()) {
 		if (thread != nullptr) {
-			FreeLock();
+			lck.unlock();
 
 			thread->join();
 			SafeDelete(thread);
 
-			GrabLock();
+			lck.lock();
 		}
 
 		// mutex is still locked, thread will block if it gets
@@ -227,8 +221,30 @@ void DownloadQueue::Push(const DownloadItem& downloadItem)
 	}
 
 	queue.push_back(downloadItem);
+}
 
-	FreeLock();
+bool DownloadQueue::Remove(int id)
+{
+	std::unique_lock<spring::mutex> lck(mutex);
+
+	for (auto it = queue.cbegin(); it != queue.cend(); ++it) {
+		if (it->id != id) {
+			continue;
+		}
+
+		if (it == queue.cbegin()) {
+			SetAbortDownloads(true);
+			lck.unlock();
+			Join();
+			lck.lock();
+			SetAbortDownloads(false);
+			thread = new spring::thread(std::bind(&DownloadQueue::Pump, this));
+		} else {
+			queue.erase(it);
+		}
+		return true;
+	}
+	return false;
 }
 
 
@@ -238,6 +254,7 @@ void DownloadQueue::Push(const DownloadItem& downloadItem)
 bool LuaVFSDownload::PushEntries(lua_State* L)
 {
 	REGISTER_LUA_CFUNC(DownloadArchive);
+	REGISTER_LUA_CFUNC(AbortDownload);
 	return true;
 }
 
@@ -263,7 +280,7 @@ void LuaVFSDownload::Free(bool stopDownloads)
 {
 	eventHandler.RemoveClient(luaVFSDownload);
 	if (stopDownloads) {
-		SetAbortDownloads();
+		SetAbortDownloads(true);
 		downloadQueue.Join();
 	}
 }
@@ -300,20 +317,29 @@ int LuaVFSDownload::DownloadArchive(lua_State* L)
 	return 0;
 }
 
+int LuaVFSDownload::AbortDownload(lua_State* L)
+{
+	const int id = luaL_checkint(L, 1);
+	bool removed = downloadQueue.Remove(id);
+	lua_pushboolean(L, removed);
+	return 1;
+}
+
 void LuaVFSDownload::Update()
 {
 	assert(Threading::IsMainThread() || Threading::IsGameLoadThread());
 	// only locks the mutex if the queue is not empty
-	if (!dlEventQueue.empty()) {
-		dlEventQueueMutex.lock();
-		dlEvent* ev;
-		while (!dlEventQueue.empty()) {
-			ev = dlEventQueue.front();
-			dlEventQueue.pop_front();
+	std::unique_lock<spring::mutex> lck(dlEventQueueMutex);
+	while (!dlEventQueue.empty()) {
+		dlEvent* ev = dlEventQueue.front();
+		dlEventQueue.pop_front();
+
+		{
+			dlEventQueueMutex.unlock();
 			ev->processEvent();
 			SafeDelete(ev);
+			dlEventQueueMutex.lock();
 		}
-		dlEventQueueMutex.unlock();
 	}
 }
 
